--- a/scss/main.scss
+++ b/scss/main.scss
@@ -179,7 +179,7 @@ main {
   color: #333;
 }
 
-#main-footer {
+#main-foot {
   text-align: center;
   padding: 1rem;
   background: darken($primary-color, 10);
