--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -45,7 +45,9 @@
     transform: translate3d(100%, 0, 0);
 
     .portrait {
-      background: url('../img/portrait_small.jpg');
+      background: url('../img/portrait-small.jpg');
+      background-size: cover;
+      background-repeat: no-repeat;
       width: 150px;
       height: 150px;
     }
