--- a/scss/main.scss
+++ b/scss/main.scss
@@ -111,14 +111,16 @@ main {
 }
 
 // Work/Projects
-.projects {
+.about-us-info {
   display: grid;
   grid-gap: 0.7rem;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+  font-size: 1.5rem;
 
   img {
     width: 100%;
-    border: 3px #fff solid;
+    border: 3px $secondary-color solid;
+    border-radius: 50%;
 
     &:hover {
       opacity: 0.5;
